--- a/app/src/main/res/layout/fragment_transportation_subway.xml
+++ b/app/src/main/res/layout/fragment_transportation_subway.xml
@@ -26,6 +26,24 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:id="@+id/no_data_block">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="NO DATA"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/card1_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -131,7 +149,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/ontime_text"
+                android:id="@+id/ontime_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="On time"
@@ -145,8 +163,8 @@
                 android:src="@drawable/checkmark"
                 android:layout_marginBottom="1dp"
                 android:layout_marginRight="10dp"
-                app:layout_constraintBottom_toBottomOf="@id/ontime_text"
-                app:layout_constraintLeft_toRightOf="@id/ontime_text"
+                app:layout_constraintBottom_toBottomOf="@id/ontime_text1"
+                app:layout_constraintLeft_toRightOf="@id/ontime_text1"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
